--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <p>
         Copyright 2024 Designed & Developed By HAPRODUCTION. MADE IN PAKISTAN.
       </p>
-    </div>
+    </div>>
     <script src="./script.js"></script>
     <script
       defer
